--- a/index.html
+++ b/index.html
@@ -64,17 +64,17 @@
 
     <section id="personajes" class="section mb-5">
       <h2 class="text-center mb-4">👤 Personajes</h2>
-      <p class="text-center text-muted">(Acá vas a poder ver a Rick, Morty y todos sus amigos interdimensionales... ¡pronto!)</p>
+      <p class="text-center">(Acá vas a poder ver a Rick, Morty y todos sus amigos interdimensionales... ¡pronto!)</p>
     </section>
 
     <section id="episodios" class="section mb-5">
       <h2 class="text-center mb-4">🎬 Episodios</h2>
-      <p class="text-center text-muted">(Listado de los mejores episodios, con descripciones y locura... próximamente)</p>
+      <p class="text-center">(Listado de los mejores episodios, con descripciones y locura... próximamente)</p>
     </section>
 
     <section id="mapa" class="section mb-5">
       <h2 class="text-center mb-4">🌌 Mapa Interdimensional</h2>
-      <p class="text-center text-muted">(Acá habrá una vista del multiverso... solo para viajeros interdimensionales)</p>
+      <p class="text-center">(Acá habrá una vista del multiverso... solo para viajeros interdimensionales)</p>
     </section>
 
   </main>
